Swipeable movie now loads provided frames

--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,7 @@
 <body>
 
 <div ng-controller="TestCtrl">
-  <input type="text" ng-model="testVar">
-  {{testVar}}
-
-  <swipeable-movie></swipeable-movie>
+  <swipeable-movie width="1024" height="768" frames="frames"></swipeable-movie>
 </div>
 
 </body>
