Added support for angular-touch.  Can now use $swipe service.

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <title>Swipeable Movie</title>
 
   <script src="lib/angular.min.js"></script>
+  <script src="lib/angular-touch.min.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/TestCtrl.js"></script>
